# mail_templates

./: .gitignore  README.html  README.md  chat_gpt.py  google_oauth2.py  inbox_window.py  mail_template.html  mail_template.spec  pyproject.toml  requirements.txt  substitute.py
Notes/: memo.md
settings/jp/: header.json
settings_example/de/: footer.json  header.json  sender.json
settings_example/en/: footer.json  header.json
src/: main.py
src/auth/: .env.exmple  azure_test.py  google_oauth2.py  outlook_azure.py
src/email/: send_email.py
src/script/: substitute.py
src/type/: EMailComponent.py  Footer.py  Header.py  Lang.py  Mode.py  Person.py
src/window/: inbox_window.py
templates/: mail_template.html
