[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mail_template"
version = "0.2.0"
authors = [
  { name="LoveKapibarasan", email="example@example.com" }
]
description = "Automate mail sending."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LoveKapibarasan/mail_templates/tree/main"
